--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -27,6 +27,6 @@
     <app-map class="map" id="farm-map"></app-map>
   </section>
   <section>
-    <app-top-farms class="top-farms" id="top-farms"></app-top-farms>
+    <!-- <app-top-farms class="top-farms" id="top-farms"></app-top-farms> -->
   </section>
 </div>
