--- a/src/app/features/home/product-categories/product-categories.component.html
+++ b/src/app/features/home/product-categories/product-categories.component.html
@@ -1,4 +1,4 @@
-<h2>Select a category:</h2>
+<h2>what can you find?</h2>
 <div class="product-categories-list">
   <app-product-category *ngFor="let category of categories" [category]="category"></app-product-category>
 </div>
