--- a/src/app/features/home/top-farms/top-farms.component.html
+++ b/src/app/features/home/top-farms/top-farms.component.html
@@ -1,4 +1,4 @@
-<h2>Top farms:</h2>
+<h2>Popular farms:</h2>
 <div class="scroll-container">
   <div class="top-farms-container">
     <div class="top-farms-item" *ngFor="let farm of topFarms">
