--- a/src/app/core/header/nav/nav.component.scss
+++ b/src/app/core/header/nav/nav.component.scss
@@ -37,9 +37,10 @@ h2 {
     color: #fff;
     text-decoration: none;
     font-size: 1.2em;
+    text-align: left;
   }
 
-  ul.nav-list {
+  .nav-list {
     margin: 0;
     padding: 0;
     display: flex;
