--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -21,9 +21,14 @@
 
 .app-description-text{
   padding: 0 2em;
+  margin: 0;
   line-height: 2em;
   text-indent: 1.5em;
   text-align: justify;
+
+  p{
+    margin: 0;
+  }
   
   .redirect-link{
     font-weight: 700;
