--- a/src/app/features/home/product-categories/product-category/product-category.component.html
+++ b/src/app/features/home/product-categories/product-category/product-category.component.html
@@ -1,1 +1,11 @@
-<div class="product-category">{{ category }}</div>
+<div class="product-category">
+  <a
+    class="product-category-item"
+    [ngClass]="category"
+    [ngStyle]="{'background-image':'url(../../../../../assets/images/icons/categories/' + category + '.svg)'}"
+    [routerLink]="['/products']"
+    [queryParams]="{ category: category }"
+    [title]="'category '+ category"
+    >{{ category }}</a
+  >
+</div>
