--- a/src/app/features/home/product-categories/product-category/product-category.component.scss
+++ b/src/app/features/home/product-categories/product-category/product-category.component.scss
@@ -1,26 +1,35 @@
 @import "src/variables";
-
 .product-category {
   width: 100%;
   min-width: 150px;
-  background-color: $primaryGreen;
-  border-radius: 10px;
-  color: #fff;
-  padding: 1rem;
   display: flex;
   justify-content: center;
+  background-color: $primaryGreen;
   align-items: center;
+  border-radius: 10px;
+
+  &:first-child {
+    margin-left: 1em;
+  }
+}
+.product-category-item {
+  width: 100%;
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 1rem;
   transition: all 0.3s ease-in-out;
+  filter: invert(1);
+  color: #000;
+  text-align: center;
+  text-decoration: none;
 
   &:hover {
     background-color: $limeGreen;
   }
   &::before {
     content: "";
-    padding-bottom: 100%;
+    padding-bottom: 85%;
     display: block;
-  }
-  &:first-child {
-    margin-left: 1em;
   }
 }
