feat: implement filter

--- a/src/app/shared/components/grid/filters/filters.component.html
+++ b/src/app/shared/components/grid/filters/filters.component.html
@@ -1,17 +1,33 @@
 <div class="filters-container" >
   <button class="filters-close" (click)="closeFilters()">x</button>
   <h2 class="filters-heading">Filter by</h2>
+
   <div class="filter-category">
-    <h3 class="filters-group-heading">Category</h3>
+    <h3 class="filters-group-heading">Categories</h3>
     <div>
-      <label href="#" (click)="showChild = !showChild"  class="filter-group-parent">category 1 <span class="show-child-toggle">{{ !showChild ? '+' : '-'}}</span>
+
+      <label (click)="showChild = !showChild" class="filter-group-parent">
+        Categories
+        <span class="show-child-toggle">{{ showChild ? '-' : '+'}}</span>
       </label>
+
       <div *ngIf="showChild" class="filter-group-child">
-        <div><input type="checkbox" /> All </div>
-        <div><input type="checkbox" /> Child 1 </div>
-        <div><input type="checkbox" /> Child 2</div>
-        <div><input type="checkbox" /> Child 3</div>
+        <div>
+          <input type="checkbox" #allCategories
+                 (change)="onCheckAll(allCategories.checked)">
+          All
+        </div>
+
+        <div *ngFor="let category of categoriesList">
+          <input type="checkbox" [value]="category"
+                 [checked]="allCategories.checked"
+                 (change)="onCheck(category)">
+          {{ category | titlecase }}
+        </div>
       </div>
+
     </div>
   </div>
+
+  <button (click)="applyFilter()">Apply filter</button>
 </div>
