--- a/src/app/shared/components/grid/grid.component.html
+++ b/src/app/shared/components/grid/grid.component.html
@@ -12,8 +12,12 @@
   </div>
 
   <div class="grid-items">
-    <app-grid-item *ngFor="let item of items | sort: sortData" [item]="item"></app-grid-item>
+    <app-grid-item *ngFor="let item of items | filter: filtersData | sort: sortData"
+                   [item]="item"></app-grid-item>
   </div>
 </div>
 
-<app-filters *ngIf="filterOpened" (isFilter)="filterOpen($event)"></app-filters>
+<app-filters *ngIf="filterOpened"
+             (isFilter)="filterOpen($event)"
+             (filters)="filtersData = $event"
+></app-filters>
