--- a/src/app/shared/components/grid/grid-item/grid-item.component.html
+++ b/src/app/shared/components/grid/grid-item/grid-item.component.html
@@ -3,7 +3,7 @@
     <img
       *ngIf="item.image; else noImage"
       [src]="item.image"
-      alt="pruduct image"
+      alt="product image"
       #image
       class="object-fit_cover"
     />
@@ -14,6 +14,6 @@
     <h3 class="item-name">{{ item.name }}</h3>
     <h4 class="item-farm-name" *ngIf="productFarm"><a [routerLink]="'/farm/'+ productFarm.id" >{{ productFarm.name}}</a></h4>
     <p class="item-description">{{ item.description }}</p>
-    <p class="item-location" *ngIf="productFarm">{{ productFarm.location ? productFarm.location.adress : 'somewhere'}}</p>
+    <p class="item-location" *ngIf="productFarm">{{ productFarm.location ? productFarm.location.address : 'somewhere'}}</p>
   </div>
 </div>
