--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,6 +62,8 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-height: 80%;
+  overflow: auto;
 
   &-title {
     font-weight: bold;
@@ -73,7 +75,7 @@ button {
     flex-direction: column;
     gap: 10px;
 
-    input {
+    input, select {
       padding: 10px 10px;
       border: 1px solid silver;
       box-sizing: border-box;
