ref: added change detection strategy OnPush to components

--- a/src/app/core/header/logo/logo.component.html
+++ b/src/app/core/header/logo/logo.component.html
@@ -1,6 +1,6 @@
 <a routerLink="/">
   <img
-    src="../../../assets/images/logo.svg"
+    src="assets/images/logo.svg"
     alt="logo"
     class="logo"
     [ngClass]="mode === 'nav' ? 'white' : null"
