--- a/src/app/shared/components/grid/grid-item/grid-item.component.html
+++ b/src/app/shared/components/grid/grid-item/grid-item.component.html
@@ -12,7 +12,7 @@
     <h4 class="item-farm-name" *ngIf="productFarm"><a [routerLink]="'/farm/'+ productFarm.id">{{ productFarm.name }}</a></h4>
     <p class="item-description">{{ item.description | slice:0:100 }}...</p>
     <p class="item-location">{{ item.location ? item.location.address + ', ' + item.location.city : productFarm?.location ? productFarm?.location?.address + ', ' + productFarm?.location?.city: 'somewhere' }}</p>
-    <div class="item-social">
+    <div class="item-social" *ngIf="item.social">
       <a class="item-social-icon fb" [href]="item.social.fb">Facebook</a>
       <a class="item-social-icon insta" [href]="item.social.instagram">Instagram</a>
     </div>
