--- a/src/app/features/auth/auth.component.scss
+++ b/src/app/features/auth/auth.component.scss
@@ -1,18 +1,39 @@
-.container {
-  position: relative;
+@import "src/variables";
+
+form {
   display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 
-.horizontal-switcher {
-  position: absolute;
-  height: 100%;
-  width: 50%;
+input {
+  padding: 10px 14px;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  border-radius: 5px;
+
+  &:hover {
+    border-color: $primaryGreen;
+  }
+
+  &:focus {
+    outline-color: $primaryGreen;
+  }
 }
 
-.vertical-switcher {
-  position: absolute;
-  height: 50%;
-  width: 100%;
+#role {
+  vertical-align: sub;
+}
+
+.switch-mode {
+  margin: 0;
+  font-size: 14px;
+  text-align: center;
+  text-decoration: underline;
+  cursor: pointer;
+
+  &:hover {
+    color: $darkGreen;
+  }
 }
