--- a/src/app/features/home/map/map.component.html
+++ b/src/app/features/home/map/map.component.html
@@ -1,31 +1,25 @@
 <h2>Where you can find?</h2>
-<div class="mapouter">
-  <div class="gmap_canvas">
-    <iframe
-      width="100%"
-      height="320"
-      id="gmap_canvas"
-      src="https://maps.google.com/maps?q=london&t=&z=13&ie=UTF8&iwloc=&output=embed"
-      frameborder="0"
-      scrolling="no"
-      marginheight="0"
-      marginwidth="0"
-    ></iframe
-    ><br /><style>
-      .mapouter {
-        position: relative;
-        text-align: right;
-        height: auto;
-        width: 100%;
-      }</style
-    ><a href="https://www.embedgooglemap.net"></a
-    ><style>
-      .gmap_canvas {
-        overflow: hidden;
-        background: none !important;
-        height: auto;
-        width: 100%;
-      }
-    </style>
-  </div>
-</div>
+<agm-map 
+
+[latitude]="lat" 
+[longitude]="lng" 
+[zoom]="zoom"
+[disableDefaultUI]="false"
+[zoomControl]="false"
+[fitBounds]="true"
+class="map-box">
+
+  <agm-marker 
+  *ngFor="let m of markers; let i = index" 
+  (markerClick)="clickedMarker(m.name, i)"
+  [agmFitBounds]="true"
+  [latitude]="m.lat" 
+  [longitude]="m.lng" >
+
+  <agm-info-window>
+    <strong>{{m.name}}</strong>
+  </agm-info-window>
+
+</agm-marker>
+</agm-map>
+
