--- a/src/app/shared/components/grid/grid-item/grid-item.component.scss
+++ b/src/app/shared/components/grid/grid-item/grid-item.component.scss
@@ -4,6 +4,12 @@
   display: flex;
   gap: 2em;
 
+  &-content{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
   &-name {
     margin: 0;
     text-align: start;
@@ -14,10 +20,10 @@
     text-align: start;
     font-family: "OpenSansBold";
 
-    a{
+    a {
       color: $limeGreen;
 
-      &:hover{
+      &:hover {
         color: $darkGreen;
       }
     }
@@ -41,11 +47,15 @@
       height: 200px;
     }
   }
-  &-social{
+  &-price {
+    color: #f00;
+    font-weight: bold;
+  }
+  &-social {
     display: flex;
     gap: 0.5em;
 
-    .item-social-icon{
+    .item-social-icon {
       display: block;
       width: 30px;
       height: 30px;
@@ -55,12 +65,12 @@
       position: relative;
       transform: all 0.3s;
 
-      &:hover{
+      &:hover {
         transform: scale(1.2);
       }
 
-      &::after{
-        content: ' ';
+      &::after {
+        content: " ";
         background-position: center;
         width: 30px;
         height: 30px;
@@ -71,21 +81,17 @@
         background-repeat: no-repeat;
       }
 
-      &.fb{
-
-        &::after{
-          background-image: url('../../../../../assets/images/icons/social/facebook.png');
+      &.fb {
+        &::after {
+          background-image: url("../../../../../assets/images/icons/social/facebook.png");
         }
       }
-      &.insta{
-
-        &::after{
-          background-image: url('../../../../../assets/images/icons/social/instagram.png');
+      &.insta {
+        &::after {
+          background-image: url("../../../../../assets/images/icons/social/instagram.png");
         }
-
       }
     }
-
   }
 }
 
@@ -93,6 +99,7 @@
   color: $primaryGreen;
   position: relative;
   padding-left: 25px;
+  font-size: 0.9em;
 
   &::before {
     content: "";
@@ -101,7 +108,8 @@
     background-size: contain;
     width: 25px;
     position: absolute;
-    top: 0;
+    top: 50%;
+    transform: translateY(-50%);
     left: 0;
     height: 25px;
     filter: invert(64%) sepia(77%) saturate(367%) hue-rotate(43deg)
