fix: edit styles and display in farms

--- a/src/app/features/farm/farm.component.html
+++ b/src/app/features/farm/farm.component.html
@@ -1,11 +1,11 @@
 <div class="farm-page-container">
   <div class="farm-page-image">
-    <img *ngIf="farm; else loading"
+    <img *ngIf="isLoading; else loading"
          [src]="farm ? farm.image : null"
          alt="farm image">
     <ng-template class="loading" #loading>Loading ...</ng-template>
   </div>
-  <div class="farm-page-description">
+  <div class="farm-page-description" *ngIf="isLoading">
     <h1>{{ farm?.name }}</h1>
     <p>{{ farm?.description }}</p>
   </div>
