--- a/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
+++ b/src/app/features/farmer/farmer-products/farmer-product/farmer-product.component.html
@@ -1,9 +1,19 @@
 <div class="product">
-  <h3 class="product-name">{{ product.name }}</h3>
-
+  
   <div class="product-content">
-    <div class="product-image"></div>
-    <div class="product-description">{{ product.description }}</div>
+    <div class="product-image">
+      <img *ngIf="product.image; else noImage"
+      [src]="product.image"
+      alt="product image"
+      class="object-fit_cover">
+    <ng-template #noImage>No image yet ...</ng-template>
+    </div>
+    
+    <div class="product-description">
+      <h3 class="product-name">{{ product.name }}</h3>
+      <div>{{ product.description }}</div>
+      <div class="product-price">{{ product.price | currency: ('UAH') }}</div>
+    </div>
     <div class="product-actions">
       <button class="edit-btn" (click)="openModal()" title="Edit">Edit</button>
       <button class="delete-btn" (click)="onDeleteProduct()">Delete</button>
