--- a/src/app/features/farmer/farmer-products/farmer-products.component.html
+++ b/src/app/features/farmer/farmer-products/farmer-products.component.html
@@ -25,12 +25,12 @@
       <input type="text" id="productImg" name="productImg" ngModel>
       <label for="productPrice">Product price</label>
       <input type="text" id="productPrice" name="productPrice" ngModel>
-      <label for="productCategory">Product category</label>
-      <select id="productCategory" name="productCategory" ngModel>
-        <option *ngFor="let category of categoriesList" [value]="category">
-          {{ category | titlecase }}
-        </option>
-      </select>
+<!--      <label for="productCategory">Product category</label>-->
+<!--      <select id="productCategory" name="productCategory" ngModel>-->
+<!--        <option *ngFor="let category of categoriesList" [value]="category">-->
+<!--          {{ category | titlecase }}-->
+<!--        </option>-->
+<!--      </select>-->
 
       <div class="modal-buttons">
         <button type="submit">Save</button>
