style: edit responsive styles and view

--- a/src/app/core/header/logo/logo.component.scss
+++ b/src/app/core/header/logo/logo.component.scss
@@ -6,3 +6,11 @@
     filter: brightness(0) invert(1);
   }
 }
+
+@media (min-width: 769px){
+  .logo {
+    &.white{
+      display: none;
+    }
+  }
+}
