--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -39,3 +39,9 @@
     font-size: 1.2em;
   }
 }
+@media (min-width: 769px){
+  .app-description{
+    width: calc(80% - 8em);
+    margin: 3em auto;
+  }
+}
