--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -9,8 +9,8 @@
   gap: 1em;
   grid-template-columns: auto;
   grid-template-rows: auto;
-  grid-template-areas: "nav . logo"
-                        "search search search";
+  grid-template-areas:
+    "nav . logo";
   box-sizing: border-box;
 
   &.home {
@@ -69,3 +69,14 @@
   }
 }
 
+@media (min-width: 769px) {
+  .header-container {
+    background-color: $limeGreen;
+    padding: 0 1em;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    &.farm {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+}
