--- a/src/app/features/home/product-categories/product-category/product-category.component.scss
+++ b/src/app/features/home/product-categories/product-category/product-category.component.scss
@@ -7,6 +7,7 @@
   background-color: $primaryGreen;
   align-items: center;
   border-radius: 10px;
+  overflow: hidden;
 
   &:first-child {
     margin-left: 1em;
@@ -26,7 +27,9 @@
 
   &:hover {
     background-color: $limeGreen;
+    filter: invert(0);
   }
+
   &::before {
     content: "";
     padding-bottom: 85%;
