--- a/src/app/features/auth/auth.component.html
+++ b/src/app/features/auth/auth.component.html
@@ -1,27 +1,56 @@
-<h2>{{ loginMode ? 'Login' : 'Registration' }}</h2>
+<div auth-container>
 
-<form #form=ngForm (ngSubmit)="loginMode ? onLogin(form.value) : onRegister(form.value)">
-  <div *ngIf="!loginMode">
-    <label for="username">Username</label><br>
-    <input type="text" id="username" name="username" ngModel required>
-  </div>
 
-  <div>
-    <label for="email">Email</label><br>
-    <input type="email" id="email" name="email" ngModel required>
-  </div>
+  <h2>{{ loginMode ? 'Login' : 'Registration' }}</h2>
+  
+  <form #form=ngForm (ngSubmit)="loginMode ? onLogin(form.value) : onRegister(form.value)" class="auth-form">
+    <div *ngIf="!loginMode" class="form-group">
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" ngModel #username ="ngModel" required minlength="3" maxlength="10">
+      <div *ngIf="username.touched" class="form-validator">
+        <span *ngIf="username.errors?.['required']">Username is Required!</span>
+        <span *ngIf="username.errors?.['minlength']">Username  minimum 3 characters are required!</span>
+        <span *ngIf="username.errors?.['maxlength']">Username  max length is 10!</span>
+      </div>
+    </div>
+  
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input 
+      type="email" 
+      id="email" 
+      name="email" 
+      ngModel  
+      #email="ngModel" 
+      pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
+      required
+      >
+      <div *ngIf="email.touched" class="form-validator">
+        <span *ngIf="email.errors?.['required']">Email is a required field!</span>
+        <span *ngIf="email.errors?.['pattern']">This is not a valid Email!</span>
+      </div>
+    </div>
+  
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" ngModel #pass ="ngModel" required minlength="3" maxlength="10" >
+      <div *ngIf="pass.touched" class="form-validator">
+        <span *ngIf="pass.errors?.['required']">Password is Required!</span>
+        <span *ngIf="pass.errors?.['minlength']">Password  minimum 3 characters are required!</span>
+        <span *ngIf="pass.errors?.['maxlength']">Password  max length is 10!</span>
+      </div>
+  
+    </div>
+  
+    <div *ngIf="!loginMode" class="form-group role">
+      <label for="role">Are you farmer?</label>
+      <input type="checkbox" id="role" name="isFarmer" ngModel>
+    </div>
+  
+    <button type="submit" class="auth-button" [disabled]="!form.form.valid || submitted" >Sign {{ loginMode ? 'in' : 'up' }}</button>
+    <p class="switch-mode" (click)="switchMode()">{{ loginMode ? 'Registration' : 'Login' }}</p>
+  </form>
 
-  <div>
-    <label for="password">Password</label><br>
-    <input type="password" id="password" name="password" ngModel required>
-  </div>
+</div>
 
-  <div *ngIf="!loginMode">
-    <label for="role">Are you farmer?</label>
-    <input type="checkbox" id="role" name="isFarmer" ngModel>
-  </div>
-
-  <button type="submit">Sign {{ loginMode ? 'in' : 'up' }}</button>
-  <p class="switch-mode" (click)="switchMode()">{{ loginMode ? 'Registration' : 'Login' }}</p>
-</form>
 
