--- a/src/app/core/header/nav/nav.component.html
+++ b/src/app/core/header/nav/nav.component.html
@@ -9,17 +9,23 @@
   <div class="nav-goup"> 
     <h3 class="nav-parent">Products</h3>
     <ul class="nav-list" >
-      <li *ngFor=" let category of categories">
-        <a [routerLink]="['/products']" [queryParams]="{category: category}" (click)="toggleMenu($event)">{{category}}</a>
+      <li *ngFor=" let category of categories$ | async">
+        <a [routerLink]="['/products']" [queryParams]="{'category': category.name}" (click)="toggleMenu($event)">{{category.name}}</a>
       </li>
     </ul>
   </div>
   <div class="nav-goup"> 
     <h3 class="nav-parent">Account</h3>
+
     <ul class="nav-list">
+      <li><a routerLink="/auth" class="nav-parent">Sign in</a></li>
+      <li><a routerLink="/auth" class="nav-parent">Sign up</a></li>
+      <li><a (click)=signOut() class="nav-parent">Sign out</a></li>
+    </ul>
+    <!-- <ul class="nav-list">
       <li><a href="#" class="nav-parent">personal info</a></li>
       <li><a href="#" class="nav-parent">shopping list</a></li>
       <li><a href="#" class="nav-parent">favorites</a></li>
-    </ul>
+    </ul> -->
   </div>
 </nav>
