--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -6,14 +6,9 @@
     <div class="app-description-text">
       <p>
         Looking for the best local food in the region? Try our FarmsFoods
-        application to find the best fresh and organic products near you. If
-        you're visiting Europe, be sure to dive into the world of original
-        tastes and flavors. Browse farms. Search for food. Locate and reserve.
+        application to find the best fresh and organic products near you. Browse farms. Search for food. Locate and reserve.
         Subscribe to be updated on new offers. 
-        <span>
-          <a href="#" routerLink="/farmer/1" class="redirect-link">Join as a Farmer</a>
-          and find new customers over the Globe
-        </span>
+        <span><a href="#" routerLink="/farmer/:id" class="redirect-link">Join as a Farmer</a> to be able to find new customers over the Globe or <a href="#" routerLink="/auth" class="redirect-link">Sign up/in</a> and enjoy all the great features for registered users</span>
       </p>
     </div>
   </section>
