--- a/src/app/features/home/product-categories/product-categories.component.scss
+++ b/src/app/features/home/product-categories/product-categories.component.scss
@@ -10,6 +10,9 @@ h2{
   overflow-x: scroll;
   justify-content: flex-start;
 }
+.view-all{
+  align-self: center;
+}
 
 @media (min-width: 1120px){
   .product-categories-list{
