--- a/src/app/features/farmer/farmer-farms/farmer-farms.component.html
+++ b/src/app/features/farmer/farmer-farms/farmer-farms.component.html
@@ -25,33 +25,88 @@
       #addFarmForm="ngForm"
       (ngSubmit)="onAddFarm(addFarmForm.value)">
 
-      <label for="farmName">Farm name</label>
-      <input type="text" id="farmName" name="farmName" ngModel required>
-      <label for="farmDesc">Farm description</label>
-      <input type="text" id="farmDesc" name="farmDesc" ngModel required>
-      <label for="farmImg">Farm image</label>
-      <input type="text" id="farmImg" name="farmImg" ngModel>
-      <label for="farmCounty">County</label>
-      <input type="text" id="farmCounty" name="farmCounty" ngModel>
-      <label for="farmCity">City</label>
-      <input type="text" id="farmCity" name="farmCity" ngModel>
-      <label for="farmAddress">Address</label>
-      <input type="text" id="farmAddress" name="farmAddress" ngModel>
-      <label for="farmAddress">Location</label>
-      <agm-map [latitude]="latitude" [longitude]="longitude" (mapClick)="onChoseLocation($event)" class="form-map">
-        <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
-      </agm-map>
-      <label for="farmFacebook">Facebook link</label>
-      <input type="text" id="farmFacebook" name="farmFacebook" ngModel>
-      <label for="farmInstagram">Instagram link</label>
-      <input type="text" id="farmInstagram" name="farmInstagram" ngModel>
-      <label for="farmTel">Phone number</label>
-      <input type="text" id="farmTel" name="farmTel" ngModel>
-      <label for="farmEmail">Farm email address</label>
-      <input type="text" id="farmEmail" name="farmEmail" ngModel>
+      <div class="form-group">
+        <label for="farmName">Farm name</label>
+        <input type="text" id="farmName" name="farmName" ngModel #farmName="ngModel" required minlength="3">
+        <div *ngIf="farmName.touched" class="form-validator">
+          <span *ngIf="farmName.errors?.['required']">Farm name is Required!</span>
+          <span *ngIf="farmName.errors?.['minlength']">Farm name  minimum 3 characters are required!</span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="farmDesc">Farm description</label>
+        <input type="text" id="farmDesc" name="farmDesc" ngModel #farmDescription="ngModel" required minlength="50">
+        <div *ngIf="farmDescription.touched" class="form-validator">
+          <span *ngIf="farmDescription.errors?.['required']">Farm description is Required!</span>
+          <span *ngIf="farmDescription.errors?.['minlength']">Farm description  minimum 50 characters are required!</span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="farmImg">Farm image</label>
+        <input type="file" class="file-upload" id="farmImg" name="farmImg" ngModel #fileUpload="ngModel" (change)="onFileSelected($event)" requiredFileType="image/jpg">
+        <div *ngIf="fileUpload.touched" class="form-note-text">
+          <span>Selected file: {{ fileName || "No file uploaded yet."}}</span>
+        </div>
+        <div *ngIf="fileUpload.errors?.['requiredFileType']" class="form-validator">
+          <span *ngIf="fileUpload.errors?.['requiredFileType']">Only jpg is acceptable file format</span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="farmCounty">County</label>
+        <input type="text" id="farmCounty" name="farmCounty" ngModel #farmCounty="ngModel" required minlength="3">
+        <div *ngIf="farmCounty.touched" class="form-validator">
+          <span *ngIf="farmCounty.errors?.['required']">County is Required!</span>
+          <span *ngIf="farmCounty.errors?.['minlength']">County minimum 3 characters are required!</span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="farmCity">City</label>
+        <input type="text" id="farmCity" name="farmCity" ngModel #farmCity="ngModel" required minlength="3">
+        <div *ngIf="farmCity.touched" class="form-validator">
+          <span *ngIf="farmCity.errors?.['required']">City is Required!</span>
+          <span *ngIf="farmCity.errors?.['minlength']">City minimum 3 characters are required!</span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="farmAddress">Address</label>
+        <input type="text" id="farmAddress" name="farmAddress" ngModel #farmAddress="ngModel" required minlength="10">
+        <div *ngIf="farmAddress.touched" class="form-validator">
+          <span *ngIf="farmAddress.errors?.['required']">Address is Required!</span>
+          <span *ngIf="farmAddress.errors?.['minlength']">Address minimum 10 characters are required!</span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="farmLocation">Location</label>
+        <agm-map [latitude]="latitude" [longitude]="longitude" (mapClick)="onChoseLocation($event)" class="form-map">
+          <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
+        </agm-map>
+      </div>
+      <div class="form-group">
+        <label for="farmFacebook">Facebook link</label>
+        <input type="text" id="farmFacebook" name="farmFacebook" ngModel>
+      </div>
+      <div class="form-group">
+        <label for="farmInstagram">Instagram link</label>
+        <input type="text" id="farmInstagram" name="farmInstagram" ngModel>
+      </div>
+      <div class="form-group">
+        <label for="farmTel">Phone number</label>
+        <input type="text" id="farmTel" name="farmTel" ngModel #farmTel="ngModel" pattern="[- +()0-9]{10,12}">
+        <div *ngIf="farmTel.touched" class="form-validator">
+          <span *ngIf="farmTel.errors?.['pattern']">Phone number should correspond "380123546789" format! </span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="farmEmail">Farm email address</label>
+        <input type="text" id="farmEmail" name="farmEmail" ngModel #email="ngModel" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+        <div *ngIf="email.touched" class="form-validator">
+          <span *ngIf="email.errors?.['required']">Email is a required field!</span>
+          <span *ngIf="email.errors?.['pattern']">This is not a valid Email!</span>
+        </div>
+      </div>
 
       <div class="modal-buttons">
-        <button type="submit">Save</button>
+        <button type="submit" [disabled]="!addFarmForm.form.valid || submitted" >Add new farm</button>
         <button type="button" (click)="closeModal()">Cancel</button>
       </div>
 
