--- a/src/app/features/farmer/farmer-products/farmer-products.component.html
+++ b/src/app/features/farmer/farmer-products/farmer-products.component.html
@@ -33,7 +33,7 @@
       </select>
 
       <div class="modal-buttons">
-        <button type="submit">Save</button>
+        <button type="submit" [disabled]="!addProductForm.form.valid || submitted">Save</button>
         <button type="button" (click)="closeModal()">Cancel</button>
       </div>
     </form>
